# osm2streets

./: .gitignore  CHANGES.md  CONTRIBUTING.md  Cargo.toml  README.md  Release.toml  index.html  lane_editor.html  main-315fc4871535168c.css  osm2streets-js-a9a41658f567e64e.js  osm2streets-js-a9a41658f567e64e_bg.wasm  osm2streets_js_bg.wasm  release_npm.sh  rust-toolchain.toml  streets-web-37be8cdc4f3e646b.js  streets-web-37be8cdc4f3e646b_bg.wasm  tests-web-1e576499a709cf5c.js  tests-web-1e576499a709cf5c_bg.wasm  tests-web-2a8aabec5a3e010c.js  tests-web-2a8aabec5a3e010c_bg.wasm  tests-web-71f7c8082833849f.js  tests-web-71f7c8082833849f_bg.wasm  tests-web-757117ff7bef00c1.js  tests-web-757117ff7bef00c1_bg.wasm  tests-web-839975cf6c53a6d1.js  tests-web-839975cf6c53a6d1_bg.wasm  tests-web-8aa7590e363f3cc0.js  tests-web-8aa7590e363f3cc0_bg.wasm  tests-web-a1479d1cd1be6536.js  tests-web-a1479d1cd1be6536_bg.wasm  tests-web-a7cea2fb0b35c08e.js  tests-web-a7cea2fb0b35c08e_bg.wasm  tests-web-cb2d98f18bb94ef1.js  tests-web-cb2d98f18bb94ef1_bg.wasm  tests-web-e9b71f996c5de5ef.js  tests-web-e9b71f996c5de5ef_bg.wasm  tests.json
experimental/: Cargo.toml
experimental/src/: io.rs  network.rs  road_parts.rs  units.rs
import_streets/: Cargo.toml
import_streets/src/: clip.rs  extract.rs  lib.rs  split_ways.rs
import_streets/src/osm_reader/: reader.rs
osm2lanes/: Cargo.toml
osm2lanes-js/: Cargo.toml  example.html
osm2lanes-js/src/: lib.rs
osm2lanes/src/: algorithm.rs  lib.rs  osm.rs  placement.rs  tests.rs  turns.rs
osm2lanes/src/edit/: add_bike_lanes.rs  add_new_lane.rs  mod.rs  one_ways.rs
osm2streets/: Cargo.toml
osm2streets-java/: .gitignore  Cargo.toml  README.md  StreetNetwork.h  StreetNetwork.java  build.sh  run.sh
osm2streets-java/src/: LatLon.java  PaintArea.java  StreetNetwork.java  Surface.java  lib.rs  org_osm2streets_StreetNetwork.h
osm2streets-js/: Cargo.toml
osm2streets-js/src/: lib.rs  planar.rs
osm2streets-js/src/planar/: build.rs  faces.rs  mod.rs
osm2streets-py/: Cargo.toml  README.md  documentation-py.md  osm2streets_test.py
osm2streets-py/src/: lib.rs
osm2streets/src/: block.rs  debug.rs  draw.rs  ids.rs  initial.rs  intersection.rs  io.rs  lib.rs  marking.rs  movements.rs  osm.rs  output.rs  paint.rs  pathfinding.rs  render.rs  road.rs  road_functions.rs  road_parts.rs  types.rs  utils.rs  validate.rs
osm2streets/src/edit/: add_bike_lanes.rs  add_new_lane.rs  mod.rs
osm2streets/src/geometry/: algorithm.rs  degenerate.rs  general_case.rs  mod.rs  on_off_ramp.rs  pretrimmed.rs  terminus.rs
osm2streets/src/lanes/: algorithm.rs  classic.rs  mod.rs  osm2lanes.rs  placement.rs  tests.rs  turns.rs
osm2streets/src/operations/: collapse_intersection.rs  collapse_short_road.rs  find_cycle.rs  mod.rs  update_geometry.rs  zip_sidepath.rs
osm2streets/src/render/: intersection_markings.rs  lane_markings.rs  mod.rs  output.rs  paint.rs
osm2streets/src/transform/: classify_intersections.rs  collapse_intersections.rs  collapse_short_road.rs  dual_carriageways.rs  find_short_roads.rs  intersection_geometry.rs  merge_short_road.rs  mod.rs  parallel_sidepaths.rs  (+5 more)
street_network/: Cargo.toml
street_network/src/: export.rs  initial.rs  lib.rs  osm.rs  pathfinding.rs  render.rs  types.rs
streets_reader/: Cargo.toml
streets_reader/src/: clip.rs  extract.rs  lib.rs  split_ways.rs
tests/: Cargo.toml  README.md  build.rs  lib.rs
tests-web/: Cargo.toml  README.md  index.html  serve_locally.sh
tests-web/src/: main.rs  map.rs
tests-web/www/: index.html
tests/arizona_highways/: geometry.json  raw_map.json  road_network.dot
tests/aurora_sausage_link/: geometry.json  input.osm  road_network.dot
tests/borough_sausage_links/: boundary.json  geometry.json  input.osm  raw_map.json  road_network.dot  test.json
tests/bristol_contraflow_cycleway/: boundary.json  geometry.json  input.osm  road_network.dot  test.json
tests/bristol_sausage_links/: boundary.json  geometry.json  input.osm  raw_map.json  road_network.dot  test.json
tests/bristol_service_road/: input.osm  road_network.dot  test.json
tests/cycleway_rejoin_road/: geometry.json  road_network.dot  test.json
tests/degenerate_bug/: geometry.json
tests/frederiksted/: geometry.json  input.osm.pbf
tests/fremantle_placement/: geometry.json  road_network.dot
tests/i5_exit_ramp/: geometry.json  input.osm  raw_map.json  road_network.dot
tests/kingsway_junction/: geometry.json  input.osm  raw_map.json  road_network.dot
tests/leeds_cycleway/: geometry.json  input.osm  road_network.dot  test.json
tests/montlake_roundabout/: boundary.json  geometry.json  input.osm  road_network.dot  test.json
tests/neukolln/: boundary.json  geometry.json
tests/northgate_dual_carriageway/: geometry.json  input.osm  raw_map.json  road_network.dot  test.json
tests/oneway_loop/: geometry.json  input.osm  road_network.dot  test.json
tests/overlapping_service_roads/: boundary.json  geometry.json  test.json
tests/perth_peanut_roundabout/: geometry.json  road_network.dot  test.json
tests/perth_stretched_lights/: geometry.json  input.osm  road_network.dot  test.json
tests/quad_intersection/: geometry.json  input.osm  road_network.dot  test.json
tests/roosevelt_cycletrack/: geometry.json  input.osm  raw_map.json  road_network.dot
tests/seattle_slip_lane/: geometry.json  input.osm  road_network.dot  test.json
tests/seattle_triangle/: boundary.json  geometry.json  input.osm  raw_map.json  road_network.dot
tests/service_road_loop/: geometry.json  input.osm  raw_map.json  road_network.dot
tests/src/: .gitignore  lib.rs
tests/st_georges_cycletrack/: geometry.json  raw_map.json  road_network.dot
tests/taipei/: geometry.json  input.osm  raw_map.json  road_network.dot  test.json
tests/tempe_light_rail/: geometry.json  input.osm  raw_map.json  road_network.dot  test.json
tests/tempe_split/: geometry.json  input.osm  road_network.dot  test.json
tests/tiny_loop/: boundary.json  geometry.json  road_network.dot  test.json
tests/tiny_roundabout/: geometry.json  input.osm  road_network.dot
(+597 files in other folders)
