[workspace]
members = [
    "experimental",
    "osm2streets",
    "osm2streets-java",
    "osm2streets-js",
    "streets_reader",
    "tests",
]

# To temporarily work on dependencies locally, uncomment this
#[patch."https://github.com/a-b-street/abstreet"]
#abstutil = { path = "/home/dabreegster/abstreet/abstutil" }
#geom = { path = "/home/dabreegster/abstreet/geom" }
