[workspace]
members = [
    "experimental",
    "osm2lanes",
    "osm2lanes-js",
    "osm2streets",
    "osm2streets-java",
    "osm2streets-js",
    "streets_reader",
    "tests",
]

resolver = "2"

# Specify the versions for common dependencies just once here, instead of
# repeating in a bunch of crates
[workspace.dependencies]
anyhow = "1.0.38"
serde = "1.0.123"
serde_json = "1.0.61"

# To temporarily work on dependencies locally, uncomment this
#[patch."https://github.com/a-b-street/abstreet"]
#abstutil = { path = "/home/dabreegster/abstreet/abstutil" }
#geom = { path = "/home/dabreegster/abstreet/geom" }
