[workspace]
members = [
    "osm2lanes",
    "osm2lanes-js",
    "osm2streets",
    "osm2streets-java",
    "osm2streets-js",
    "streets_reader",
    "tests",
    "osm2streets-py",
]

resolver = "2"

# Specify the versions for common dependencies just once here, instead of
# repeating in a bunch of crates
[workspace.dependencies]
anyhow = "1.0.38"
geom = { git = "https://github.com/a-b-street/geom" }
serde = "1.0.193"
serde_json = "1.0.108"

# To temporarily work on dependencies locally, uncomment this
#[patch."https://github.com/a-b-street/abstreet"]
#abstutil = { path = "/home/dabreegster/abstreet/abstutil" }
#geom = { path = "/home/dabreegster/geom" }

# For local development, build dependencies in release mode once
[profile.dev.package."*"]
opt-level = 3
