[package]
name = "experimental"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.2"
petgraph = "0.6.0"

# utilities from abstreet
abstutil = { git = "https://github.com/a-b-street/abstreet" }

# OSM to street network representation
import_streets = { path = "../import_streets" }
street_network = { path = "../osm2streets" }

# boilerplate
anyhow = "1.0.38"
enum-map = "0.6.6"
serde = "1.0.123"
