[package]
name = "experimental"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.2"
petgraph = "0.6.3"

# utilities from abstreet
abstutil = { git = "https://github.com/a-b-street/abstreet" }

# OSM to street network representation
streets_reader = { path = "../streets_reader" }
osm2streets = { path = "../osm2streets" }

# boilerplate
anyhow = { workspace = true }
enum-map = "2.4.2"
serde = { workspace = true }
