[package]
name = "osm2lanes-js"
version = "0.1.0"
description = "Javascript API for osm2lanes"
repository = "https://github.com/a-b-street/osm2streets"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
abstutil = { git = "https://github.com/a-b-street/abstreet" }
console_error_panic_hook = "0.1.6"
osm2lanes = { path = "../osm2lanes" }
wasm-bindgen = "0.2.84"
serde_json = { workspace = true }
serde-wasm-bindgen = "0.5.0"
