[package]
name = "osm2lanes"
version = "0.1.0"
edition = "2021"

[dependencies]
abstutil = { git = "https://github.com/a-b-street/abstreet" }
anyhow = { workspace = true }
enumset = { version = "1.0.12", features=["serde"] }
geom = { git = "https://github.com/a-b-street/abstreet" }
serde = { workspace = true }
