[package]
name = "osm2lanes"
version = "0.1.0"
edition = "2021"

[dependencies]
abstutil = { git = "https://github.com/a-b-street/abstreet" }
anyhow = { workspace = true }
enumset = { version = "1.0.12", features=["serde"] }
geom = { workspace = true }
muv-osm = { version = "0.1.0", path = "../../muv8/muv-osm", features = ["lanes", "serde"] }
osm-reader = { git = "https://github.com/a-b-street/osm-reader", features = ["serde"] }
serde = { workspace = true }

[dev-dependencies]
env_logger = "0.10.1"
