[package]
name = "osm2streets-js"
version = "0.1.1"
description = "Javascript API for osm2streets"
repository = "https://github.com/a-b-street/osm2streets"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
abstutil = { git = "https://github.com/a-b-street/abstreet" }
anyhow = "1.0.38"
console_error_panic_hook = "0.1.6"
geom = { git = "https://github.com/a-b-street/abstreet" }
experimental = { path = "../experimental" }
# TODO Upstream this in abstutil crate. WASM is missing some runtime dep otherwise.
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
osm2streets = { path = "../osm2streets" }
serde = { version = "1", features = ["derive"] }
streets_reader = { path = "../streets_reader" }
wasm-bindgen = { version = "=0.2.81", features = [
    "serde-serialize",
] } # loosen after https://github.com/rustwasm/wasm-bindgen/issues/2774
