[package]
name = "osm2streets-js"
version = "0.1.4"
description = "Javascript API for osm2streets"
repository = "https://github.com/a-b-street/osm2streets"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
abstutil = { git = "https://github.com/a-b-street/abstreet" }
anyhow = { workspace = true }
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
geom = { workspace = true }
experimental = { path = "../experimental" }
# TODO Upstream this in abstutil crate. WASM is missing some runtime dep otherwise.
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
log = "0.4.20"
osm2streets = { path = "../osm2streets" }
serde = { workspace = true }
serde_json = { workspace = true }
streets_reader = { path = "../streets_reader" }
wasm-bindgen = "0.2.84"
serde-wasm-bindgen = "0.5.0"
