[package]
name = "osm2streets_python"
version = "0.1.0"
edition = "2018"

[dependencies]
abstutil = { git = "https://github.com/a-b-street/abstreet" }
geom = { workspace = true }
osm2streets = { path = "../osm2streets" }
streets_reader = { path = "../streets_reader" }
pyo3 = { version = "0.17", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
env_logger = "0.10"

[lib]
crate-type = ["cdylib"]