[package]
name = "osm2streets"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"
rust-version = "1.66"

[dependencies]
abstutil = { git = "https://github.com/a-b-street/abstreet" }
anyhow = { workspace = true }
enumset = { version = "1.0.12", features=["serde"] }
geo = "0.27.0"
geojson = "0.24.1"
geom = { workspace = true }
itertools = "0.11.0"
log = "0.4.14"
osm2lanes = { path = "../osm2lanes" }
petgraph = { version = "0.6.3" }
serde = { workspace = true }
serde_json = { workspace = true }
