[package]
name = "streets_reader"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[dependencies]
abstutil = { git = "https://github.com/a-b-street/abstreet" }
anyhow = { workspace = true }
country-geocoder = { git = "https://github.com/a-b-street/country-geocoder" }
geom = { git = "https://github.com/a-b-street/abstreet" }
log = "0.4.14"
osm2streets = { path = "../osm2streets" }
osmpbf = "0.3.2"
xmlparser = "0.13.5"
