[package]
name = "streets_reader"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[dependencies]
abstutil = { git = "https://github.com/a-b-street/abstreet" }
anyhow = { workspace = true }
country-boundaries = "1.2.0"
geom = { workspace = true }
log = "0.4.14"
muv-osm = { git = "https://gitlab.com/LeLuxNet/Muv", features = ["lanes"] }
osm-reader = { git = "https://github.com/a-b-street/osm-reader" }
osm2streets = { path = "../osm2streets" }
