[package]
name = "tests-web"
version = "0.1.0"
description = "Streets Map and Test Browser"
readme = true
repository = "https://github.com/a-b-street/osm2streets"
license = "Apache 2.0"
edition = "2021"

[dependencies]
console_log = { version = "0.2", optional = true, features = ["color"] }
getrandom = { version = "0.2", features = ["js"] }
gloo-utils = "0.1"
leaflet = { git = "https://github.com/droogmic/leaflet-rs", branch = "polyline_get_bounds" }
log = "0.4"
#osm2lanes = { path = "../osm2lanes", features = ["overpass"] }
piet = { version = "0.5", features = ["samples"] }
piet-web = "0.5"
serde = { version = "1", features = ["derive"] }
streets  = { path = "../osm2streets" }
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4", optional = true }
yew = "0.19"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlInputElement", "HtmlCanvasElement", "HtmlSelectElement"]

[features]
default = ["console_log", "wee_alloc"]
