[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
abstutil = { git = "https://github.com/a-b-street/abstreet" }
anyhow = "1.0.38"
streets_reader = { path = "../streets_reader" }
serde = "1.0.123"
serde_json = "1.0.61"
street_network = { path = "../osm2streets" }
experimental = { path = "../experimental" }
