[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
abstutil = { git = "https://github.com/a-b-street/abstreet" }
anyhow = { workspace = true }
env_logger = "0.10.1"
geom = { git = "https://github.com/a-b-street/abstreet" }
streets_reader = { path = "../streets_reader" }
serde = { workspace = true }
serde_json = { workspace = true }
osm2streets = { path = "../osm2streets" }
experimental = { path = "../experimental" }
